[package]
name = "reth-verkle"
version = "0.1.0"
edition = "2021"

[dependencies]
ffi_interface = {git = "https://github.com/1010adigupta/rust-verkle.git", branch = "reth-verkle-genesis-changes"}
ipa-multipoint = {git = "https://github.com/1010adigupta/rust-verkle.git", branch = "reth-verkle-genesis-changes"}
verkle-trie = {git = "https://github.com/1010adigupta/rust-verkle.git", branch = "reth-verkle-genesis-changes"}